# openenv-support-ticket

./: .env  .env.template  .gitignore  Dockerfile  INTEGRATION_GUIDE.md  README.md  env.py  graders.py  index.html  inference.py  openenv.yaml  pyproject.toml  requirements.txt
backend/: intelligent_scorer.py  main.py  models.py  requirements.txt
frontend/: code.html  index.html  package-lock.json  package.json
frontend/js/: api-service.js  game-logic.js
server/: app.py
test_data/: easy_tickets.json  hard_tickets.json  medium_tickets.json
