[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "support-ticket-triage"
version = "1.0.0"
description = "Support Ticket Triage Environment"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0.post1",
    "pydantic==2.5.2",
    "requests==2.31.0",
    "openai>=2.7.2",
    "python-dotenv==1.0.0",
    "pyyaml==6.0",
    "supabase>=2.0.0",
    "google-generativeai==0.3.1",
    "httpx>=0.24.0,<0.24.2",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
